# Hokmah

./: Cargo.toml  params.yml
src/: board.rs  cache.rs  color.rs  direction.rs  engine.rs  eval.rs  file.rs  game.rs  kind.rs  lib.rs  opening_book.rs  params.rs  piece.rs  ply.rs  position.rs  rank.rs  trainer.rs  traits.rs
