[package]
name = "hokmah"
version = "0.1.2"
authors = ["Travis Harmon <harmtrav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
crossbeam = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
regex = "*"
lazy_static = "*"
